--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,9 +50,10 @@ jobs: # 定义需要执行的工作
             # docker stop open-webui || true # 停止运行中的容器，如果容器不存在则忽略错误
             if [ "$(docker ps -q -f name=open-webui)" ]; then
               docker stop open-webui # 停止运行中的容器
+              docker rm open-webui  # 删除容器
+
             fi
 
-            docker rm open-webui || true # 删除容器，如果容器不存在则忽略错误
             docker run -p 3000:8080 -d --rm --name open-webui dianbobo202311/open-webui:latest # 运行Docker容器
             # docker images -q | tail -n +4 | xargs docker rmi # 删除除前三个以外的所有Docker镜像
 
