--- a/.github/workflows/deploy-out.yml
+++ b/.github/workflows/deploy-out.yml
@@ -1,3 +1,5 @@
+# 给他们独立部署 
+
 # SERVER_HOST：您服务器的IP地址或域名。
 # SERVER_USER：SSH登录用户名。
 # SERVER_PASSWORD：SSH登录密码。（推荐使用SSH密钥对认证代替密码）
@@ -9,7 +11,7 @@ name: Deploy to Server # 定义工作流程的名称
 on: # 定义触发工作流程的事件
   push: # 当代码被推送时
     branches: # 指定触发工作流程的分支
-      - main # 只有main分支的推送才会触发此工作流程
+      - out # 只有main分支的推送才会触发此工作流程
 
 jobs: # 定义需要执行的工作
   # timeout-minutes: 30
@@ -31,7 +33,7 @@ jobs: # 定义需要执行的工作
           # password: ${{ secrets.DOCKER_PASSWORD }}
 
           push: true # 推送镜像到Docker Hub
-          tags: dianbobo202311/open-webui:latest # 设置镜像的标签
+          tags: dianbobo202311/open-webui:out-latest # 设置镜像的标签
 
 
       - name: Deploy to Server # 步骤名称
@@ -42,12 +44,12 @@ jobs: # 定义需要执行的工作
           password: ${{ secrets.SERVER_PASSWORD }} # SSH登录密码
           script: | # 通过SSH执行的脚本
 
-            # docker pull dianbobo202311/open-webui:latest # 拉取最新的Docker镜像
+            # docker pull dianbobo202311/open-webui:out-latest # 拉取最新的Docker镜像
             # docker stop open-webui || true # 停止运行中的容器，如果容器不存在则忽略错误
-            # docker run -p 3000:3000 -d  --rm  --name open-webui dianbobo202311/open-webui:latest # 运行Docker容器
+            # docker run -p 3000:3000 -d  --rm  --name open-webui dianbobo202311/open-webui:out-latest # 运行Docker容器
             # docker logs open-webui
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin # 登陆docker
-            docker pull dianbobo202311/open-webui:latest # 拉取最新的Docker镜像
+            docker pull dianbobo202311/open-webui:out-latest # 拉取最新的Docker镜像
             # docker stop open-webui || true # 停止运行中的容器，如果容器不存在则忽略错误
             if [ "$(docker ps -q -f name=open-webui)" ]; then
               docker stop open-webui # 停止运行中的容器
@@ -55,16 +57,16 @@ jobs: # 定义需要执行的工作
 
             fi
 
-            docker run -p 3000:8080 -d --rm --name open-webui dianbobo202311/open-webui:latest # 运行Docker容器
+            docker run -p 3000:8080 -d --rm --name open-webui dianbobo202311/open-webui:out-latest # 运行Docker容器
             # docker images -q | tail -n +4 | xargs docker rmi # 删除除前三个以外的所有Docker镜像
 
 
 # 注释解释
-# docker run --rm -d --name open-webui dianbobo202311/open-webui:latest
+# docker run --rm -d --name open-webui dianbobo202311/open-webui:out-latest
 # --rm: 容器退出时自动清理容器文件系统
 # -d: 后台运行容器
 # --name open-webui: 为容器指定一个名称
-# dianbobo202311/open-webui:latest: 使用的镜像及其标签
+# dianbobo202311/open-webui:out-latest: 使用的镜像及其标签
 
 
 # 先提前到服务器安装docker并docker login
