feat: 指纹登录，访客登陆版本

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ on: # 定义触发工作流程的事件
   push: # 当代码被推送时
     branches: # 指定触发工作流程的分支
       - main # 只有main分支的推送才会触发此工作流程
+      - fingerprintAuth  # 指纹登录，无需用户登录 
 
 jobs: # 定义需要执行的工作
   build: # 工作的标识符，这里是构建工作
