--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fingerprintjs/fingerprintjs": "^4.3.0",
 		"@pyscript/core": "^0.4.32",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"async": "^3.2.5",
