--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"private": true,
 	"scripts": {
 		"dev": "concurrently \" vite dev --host\" \"cd backend && ./start.sh\"",
+		"front": "vite dev --host ",
+		"backend": "cd backend && ./start.sh",
 		"build": "npm run pyodide:fetch && vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -50,8 +52,13 @@
 	"type": "module",
 	"dependencies": {
 		"@fingerprintjs/fingerprintjs": "^4.3.0",
+		"@polkadot/api": "^11.2.1",
+		"@polkadot/util": "^12.6.2",
+		"@polkadot/util-crypto": "^12.6.2",
 		"@pyscript/core": "^0.4.32",
 		"@sveltejs/adapter-node": "^1.3.1",
+		"@tanstack/react-query": "^5.40.0",
+		"@web3modal/wagmi": "^4.2.3",
 		"async": "^3.2.5",
 		"bits-ui": "^0.19.7",
 		"dayjs": "^1.11.10",
@@ -68,6 +75,8 @@
 		"pyodide": "^0.26.0-alpha.4",
 		"svelte-sonner": "^0.3.19",
 		"tippy.js": "^6.3.7",
-		"uuid": "^9.0.1"
+		"uuid": "^9.0.1",
+		"viem": "^2.13.3",
+		"wagmi": "^2.9.8"
 	}
 }
