--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"svelte-sonner": "^0.3.19",
 		"tippy.js": "^6.3.7",
 		"uuid": "^9.0.1",
+		"vconsole": "^3.15.1",
 		"viem": "^2.13.3",
 		"wagmi": "^2.9.8"
 	}
