--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,7 @@ on: # 定义触发工作流程的事件
 
 jobs: # 定义需要执行的工作
   build: # 工作的标识符，这里是构建工作
+
     runs-on: ubuntu-latest # 指定运行环境为最新版本的Ubuntu虚拟环境
 
     steps: # 定义执行的步骤
@@ -51,12 +52,11 @@ jobs: # 定义需要执行的工作
             # docker logs open-webui
             echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin # 登陆docker
             docker pull dianbobo202311/open-webui:latest # 拉取最新的Docker镜像
-            # docker stop open-webui || true # 停止运行中的容器，如果容器不存在则忽略错误
-            if [ "$(docker ps -q -f name=open-webui)" ]; then
-              docker stop open-webui # 停止运行中的容器
-              docker rm open-webui  # 删除容器
-
-            fi
+            docker stop open-webui || true # 停止运行中的容器，如果容器不存在则忽略错误
+            # if [ "$(docker ps -q -f name=open-webui)" ]; then
+            #   docker stop open-webui # 停止运行中的容器
+            #   docker rm open-webui  # 删除容器
+            # fi
 
             docker run -p 3000:8080 -d --rm --name open-webui dianbobo202311/open-webui:latest # 运行Docker容器
             # docker images -q | tail -n +4 | xargs docker rmi # 删除除前三个以外的所有Docker镜像
