feat: 准备上生产，收尾了一些问题

--- a/.github/workflows/deploy-out.yml
+++ b/.github/workflows/deploy-out.yml
@@ -13,6 +13,7 @@ on: # 定义触发工作流程的事件
     branches: # 指定触发工作流程的分支
       - out # 只有main分支的推送才会触发此工作流程
       - fingerprintAuth-out # 发到他们服务器的版本（指纹自动登录）
+      - wallet-connection-out # 发到他们服务器的版本（钱包连接）
 
 jobs: # 定义需要执行的工作
   # timeout-minutes: 30
