--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-cypress": "^3.0.2",
 		"eslint-plugin-svelte": "^2.30.0",
+		"http-proxy-middleware": "^3.0.0",
 		"i18next-parser": "^8.13.0",
 		"postcss": "^8.4.31",
 		"prettier": "^2.8.0",
