--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"pyodide": "^0.26.0-alpha.4",
 		"svelte-sonner": "0.3.19",
 		"tippy.js": "^6.3.7",
-		"uuid": "^9.0.1"
+		"uuid": "^9.0.1",
+		"vconsole": "^3.15.1"
 	}
 }
