feat: 切换成分布式网络的 模型调用，请求不稳定，先上测试给他们体验下

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,9 @@ jobs: # 定义需要执行的工作
             # docker stop open-webui || true # 停止运行中的容器，如果容器不存在则忽略错误
             if [ "$(docker ps -q -f name=open-webui)" ]; then
               docker stop open-webui # 停止运行中的容器
-              docker rm open-webui  # 删除容器
+              # docker rm open-webui  # 删除容器
+              sleep 2
+
 
             fi
 
