--- a/backend/data/config.json
+++ b/backend/data/config.json
@@ -53,7 +53,7 @@
 				"content": "Check the following sentence for grammar and clarity: \"[sentence]\". Rewrite it for better readability while maintaining its original meaning."
 			}
 		],
-		"default_models": "luchenyu/yi1.5-34b"
+		"default_models": "Qwen2-72B,Llama3-70B"
 	},
 	"openai": {
 		"api_base_urls": [
