--- a/package.json
+++ b/package.json
@@ -58,11 +58,13 @@
 		"@pyscript/core": "^0.4.32",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@tanstack/react-query": "^5.40.0",
-		"@web3modal/wagmi": "^4.2.3",
+		"@walletconnect/web3wallet": "^1.12.3",
+		"@web3modal/wagmi": "^5.0.6",
 		"async": "^3.2.5",
 		"bits-ui": "^0.19.7",
 		"core-js": "^3.37.1",
 		"dayjs": "^1.11.10",
+		"ethers": "^6.13.1",
 		"eventsource-parser": "^1.1.2",
 		"file-saver": "^2.0.5",
 		"highlight.js": "^11.9.0",
