--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ on: # 定义触发工作流程的事件
       - main # 只有main分支的推送才会触发此工作流程
       - fingerprintAuth  # 指纹登录，无需用户登录 
       - wallet-connection  # 钱包管理 
+      - wallet-ether  # 更新为ethers处理的钱包 
 
 jobs: # 定义需要执行的工作
   build: # 工作的标识符，这里是构建工作
