--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-cypress": "^3.0.2",
 		"eslint-plugin-svelte": "^2.30.0",
+		"http-proxy-middleware": "^3.0.0",
 		"i18next-parser": "^8.13.0",
 		"postcss": "^8.4.31",
 		"prettier": "^2.8.0",
@@ -76,7 +77,7 @@
 		"katex": "^0.16.9",
 		"marked": "^9.1.0",
 		"pyodide": "^0.26.0-alpha.4",
-		"svelte-sonner": "^0.3.19",
+		"svelte-sonner": "0.3.19",
 		"tippy.js": "^6.3.7",
 		"uuid": "^9.0.1",
 		"vconsole": "^3.15.1",
