--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -61,3 +61,5 @@ youtube-transcript-api==0.6.2
 pytube
 substrate-interface==1.7.8
 web3
+alibabacloud_tea_openapi==0.2.5
+alibabacloud_cloudauth_intl20220809==2.0.2
