--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -61,5 +61,6 @@ youtube-transcript-api==0.6.2
 pytube
 substrate-interface==1.7.8
 web3
-alibabacloud_tea_openapi==0.2.5
+alibabacloud_tea_openapi==0.3.10
 alibabacloud_cloudauth_intl20220809==2.0.2
+# qrcode==7.4.2
