--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.1.125",
 	"private": true,
 	"scripts": {
-		"dev": "concurrently \" vite dev --host\" \"cd backend && ./start.sh\"",
+		"dev-old": "concurrently \" vite dev --host\" \"cd backend && ./start.sh\"",
+		"dev": "concurrently \" vite dev --host\" \"cd backend && make run\"",
 		"front": "vite dev --host ",
 		"backend": "cd backend && ./start.sh",
 		"build": "npm run pyodide:fetch && vite build",
@@ -77,6 +78,7 @@
 		"katex": "^0.16.9",
 		"marked": "^9.1.0",
 		"pyodide": "^0.26.0-alpha.4",
+		"qrcode": "^1.5.3",
 		"svelte-sonner": "0.3.19",
 		"tippy.js": "^6.3.7",
 		"uuid": "^9.0.1",
