--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -64,3 +64,7 @@ web3
 alibabacloud_tea_openapi==0.3.10
 alibabacloud_cloudauth_intl20220809==2.0.2
 # qrcode==7.4.2
+alibabacloud-facebody20191230==5.1.2
+oss2==2.18.6
+aliyun-python-sdk-viapiutils==1.0
+viapi-utils==1.0.1
