--- a/backend/data/config.json
+++ b/backend/data/config.json
@@ -53,7 +53,7 @@
 				"content": "Check the following sentence for grammar and clarity: \"[sentence]\". Rewrite it for better readability while maintaining its original meaning."
 			}
 		],
-		"default_models": "Gemma-2-27B,Llama-3.1-405B"
+		"default_models": "Llama-3.1-405B,Gemma-2-27B"
 	},
 	"openai": {
 		"api_base_urls": [
