--- a/package.json
+++ b/package.json
@@ -60,13 +60,14 @@
 		"@pyscript/core": "^0.4.32",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@tanstack/react-query": "^5.40.0",
-		"@walletconnect/web3wallet": "^1.12.3",
 		"@web3modal/wagmi": "^5.0.6",
+		"viem": "^2.13.1",
+		"wagmi": "^2.9.8",
+		"ethers": "^6.13.1",
 		"async": "^3.2.5",
 		"bits-ui": "^0.19.7",
 		"core-js": "^3.37.1",
 		"dayjs": "^1.11.10",
-		"ethers": "^6.13.1",
 		"eventsource-parser": "^1.1.2",
 		"file-saver": "^2.0.5",
 		"highlight.js": "^11.9.0",
@@ -82,8 +83,6 @@
 		"svelte-sonner": "0.3.19",
 		"tippy.js": "^6.3.7",
 		"uuid": "^9.0.1",
-		"vconsole": "^3.15.1",
-		"viem": "^2.13.3",
-		"wagmi": "^2.9.8"
+		"vconsole": "^3.15.1"
 	}
 }
