--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"@types/bun": "latest",
 		"@typescript-eslint/eslint-plugin": "^6.17.0",
 		"@typescript-eslint/parser": "^6.17.0",
+		"@vitejs/plugin-legacy": "^3.0.0",
 		"autoprefixer": "^10.4.16",
 		"concurrently": "^8.2.2",
 		"cypress": "^13.8.1",
@@ -61,13 +62,11 @@
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@tanstack/react-query": "^5.40.0",
 		"@web3modal/wagmi": "^5.0.6",
-		"viem": "^2.13.1",
-		"wagmi": "^2.9.8",
-		"ethers": "^6.13.1",
 		"async": "^3.2.5",
 		"bits-ui": "^0.19.7",
 		"core-js": "^3.37.1",
 		"dayjs": "^1.11.10",
+		"ethers": "^6.13.1",
 		"eventsource-parser": "^1.1.2",
 		"file-saver": "^2.0.5",
 		"highlight.js": "^11.9.0",
@@ -83,6 +82,8 @@
 		"svelte-sonner": "0.3.19",
 		"tippy.js": "^6.3.7",
 		"uuid": "^9.0.1",
-		"vconsole": "^3.15.1"
+		"vconsole": "^3.15.1",
+		"viem": "^2.13.1",
+		"wagmi": "^2.9.8"
 	}
 }
