--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
 		"@pyscript/core": "^0.4.32",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@tanstack/react-query": "^5.40.0",
+		"@wagmi/core": "^2.14.4",
 		"@web3modal/wagmi": "^4.2.3",
 		"async": "^3.2.5",
 		"bits-ui": "^0.19.7",
@@ -82,7 +83,6 @@
 		"tippy.js": "^6.3.7",
 		"uuid": "^9.0.1",
 		"vconsole": "^3.15.1",
-		"viem": "^2.13.1",
-		"wagmi": "^2.9.8"
+		"viem": "^2.13.1"
 	}
 }
