--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
 		"i18next-browser-languagedetector": "^7.2.0",
 		"i18next-resources-to-backend": "^1.2.0",
 		"idb": "^7.1.1",
+		"js-base64": "^3.7.7",
 		"js-sha256": "^0.10.1",
 		"katex": "^0.16.9",
 		"marked": "^9.1.0",
