--- a/backend/data/config.json
+++ b/backend/data/config.json
@@ -53,7 +53,7 @@
 				"content": "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning."
 			}
 		],
-		"default_models": "Qwen2.5-72B,Llama-3.1-Nemotron-70B"
+		"default_models": "LImma3.1 405B,Qwen2.5-72B"
 	},
 	"openai": {
 		"api_base_urls": [
