--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"bits-ui": "^0.19.7",
 		"core-js": "^3.37.1",
 		"dayjs": "^1.11.10",
+		"echarts": "^5.5.1",
 		"ethers": "^6.13.1",
 		"eventsource-parser": "^1.1.2",
 		"file-saver": "^2.0.5",
