--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"@web3modal/wagmi": "^4.2.3",
 		"async": "^3.2.5",
 		"bits-ui": "^0.19.7",
+		"compressorjs": "^1.2.1",
 		"core-js": "^3.37.1",
 		"dayjs": "^1.11.10",
 		"echarts": "^5.5.1",
