--- a/backend/data/config.json
+++ b/backend/data/config.json
@@ -53,7 +53,7 @@
 				"content": "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning."
 			}
 		],
-		"default_models": "Llama3.3-70B,Pixtral-124B"
+		"default_models": "DeepSeek 3.0-671B,QVQ-72B"
 	},
 	"openai": {
 		"api_base_urls": [
