--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
 		"js-base64": "^3.7.7",
 		"js-sha256": "^0.10.1",
 		"katex": "^0.16.9",
+		"linkifyjs": "^4.2.0",
 		"marked": "^9.1.0",
 		"pyodide": "^0.26.0-alpha.4",
 		"qrcode": "^1.5.3",
