--- a/static/pyodide/package.json
+++ b/static/pyodide/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pyodide",
-  "version": "0.26.0-alpha.4",
+  "version": "0.26.1",
   "description": "The Pyodide JavaScript package",
   "keywords": [
     "python",
@@ -127,7 +127,6 @@
     }
   },
   "dependencies": {
-    "base-64": "^1.0.0",
     "ws": "^8.5.0"
   },
   "types": "./pyodide.d.ts",
