--- a/backend/data/config.json
+++ b/backend/data/config.json
@@ -53,7 +53,7 @@
 				"content": "Check the following sentence for grammar and clarity: '[sentence]'. Rewrite it for better readability while maintaining its original meaning."
 			}
 		],
-		"default_models": "deepseek-chat"
+		"default_models": "qwen3-max-preview"
 	},
 	"openai": {
 		"api_base_urls": [
