--- a/.github/workflows/deploy-out.yml
+++ b/.github/workflows/deploy-out.yml
@@ -1,4 +1,4 @@
-# 给他们独立部署 
+# 给他们独立部署
 
 # SERVER_HOST：您服务器的IP地址或域名。
 # SERVER_USER：SSH登录用户名。
@@ -25,8 +25,7 @@ jobs: # 定义需要执行的工作
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        # run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
-
+        # run: docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 
       - name: Build and Push Docker image # 步骤名称
         uses: docker/build-push-action@v5 # 使用docker/build-push-action@v2动作，用于构建并推送Docker镜像
@@ -35,7 +34,7 @@ jobs: # 定义需要执行的工作
           # password: ${{ secrets.DOCKER_PASSWORD }}
 
           push: true # 推送镜像到Docker Hub
-          tags: dianbobo202311/open-webui:out-latest # 设置镜像的标签
+          tags: 18879011721/open-webui:out-latest # 设置镜像的标签
 
 
       # - name: Deploy to Server # 步骤名称
@@ -46,12 +45,12 @@ jobs: # 定义需要执行的工作
       #     password: ${{ secrets.SERVER_PASSWORD }} # SSH登录密码
       #     script: | # 通过SSH执行的脚本
 
-      #       # docker pull dianbobo202311/open-webui:out-latest # 拉取最新的Docker镜像
+      #       # docker pull 18879011721/open-webui:out-latest # 拉取最新的Docker镜像
       #       # docker stop open-webui || true # 停止运行中的容器，如果容器不存在则忽略错误
-      #       # docker run -p 3000:3000 -d  --rm  --name open-webui dianbobo202311/open-webui:out-latest # 运行Docker容器
+      #       # docker run -p 3000:3000 -d  --rm  --name open-webui 18879011721/open-webui:out-latest # 运行Docker容器
       #       # docker logs open-webui
       #       echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin # 登陆docker
-      #       docker pull dianbobo202311/open-webui:out-latest # 拉取最新的Docker镜像
+      #       docker pull 18879011721/open-webui:out-latest # 拉取最新的Docker镜像
       #       # docker stop open-webui || true # 停止运行中的容器，如果容器不存在则忽略错误
       #       if [ "$(docker ps -q -f name=open-webui)" ]; then
       #         docker stop open-webui # 停止运行中的容器
@@ -59,17 +58,14 @@ jobs: # 定义需要执行的工作
 
       #       fi
 
-      #       docker run -p 3000:8080 -d --rm --name open-webui dianbobo202311/open-webui:out-latest # 运行Docker容器
+      #       docker run -p 3000:8080 -d --rm --name open-webui 18879011721/open-webui:out-latest # 运行Docker容器
       #       # docker images -q | tail -n +4 | xargs docker rmi # 删除除前三个以外的所有Docker镜像
-
-
 # 注释解释
-# docker run --rm -d --name open-webui dianbobo202311/open-webui:out-latest
+# docker run --rm -d --name open-webui 18879011721/open-webui:out-latest
 # --rm: 容器退出时自动清理容器文件系统
 # -d: 后台运行容器
 # --name open-webui: 为容器指定一个名称
-# dianbobo202311/open-webui:out-latest: 使用的镜像及其标签
-
+# 18879011721/open-webui:out-latest: 使用的镜像及其标签
 
 # 先提前到服务器安装docker并docker login
 
@@ -79,6 +75,4 @@ jobs: # 定义需要执行的工作
 
 # 步骤2：登录
 # docker login -u XXX  -p xxx
-
-
 
