--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@sveltejs/kit": "^1.30.0",
 		"@tailwindcss/typography": "^0.5.10",
 		"@types/bun": "latest",
+		"@types/katex": "^0.16.7",
 		"@typescript-eslint/eslint-plugin": "^6.17.0",
 		"@typescript-eslint/parser": "^6.17.0",
 		"autoprefixer": "^10.4.16",
@@ -79,6 +80,7 @@
 		"ethers": "^6.13.1",
 		"eventsource-parser": "^1.1.2",
 		"file-saver": "^2.0.5",
+		"github-markdown-css": "^5.8.1",
 		"highlight.js": "^11.9.0",
 		"i18next": "^23.10.0",
 		"i18next-browser-languagedetector": "^7.2.0",
